# dwd-mcp

./: GEMINI.md  LICENSE  README.md  gemini-extension.json  pyproject.toml  requirements.txt  server.py
.gemini/: settings.json
src/dwd_mcp/: __init__.py  utils.py  weather.py
tests/: test_integration.py  test_server.py
