[project]
name = "dwd-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christian Laußat", email = "christian.laussat@kiwigrid.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.26.0",
    "polars>=1.38.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "wetterdienst>=0.119.0",
]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"
